Uplodoing file with search bar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <h3 class="page-heading">Popular Destinations to Travel</h3>
+
+    <div class="search-container">
+        <input type="text" id="search-input" placeholder="Search destinations...">
+    </div>
+    
     <div id="destinations-container" class="container"></div>
+
+    
 
     <script src="script.js"></script>
 </body>
