--- a/destination.html
+++ b/destination.html
@@ -8,12 +8,22 @@
 </head>
 <body>
     <div class="details-container">
-        <img id="destination-image" alt="Destination Image">
+        <h3 style="text-align: center;">Book Your Trip</h3>
+
+        <form id="booking-form">
+            <input type="text" id="name" placeholder="Name" required>
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="number" id="travelers" placeholder="Number of Travelers" min="1" required>
+            <input type="date" id="travel-date" required>
+            <button type="submit">Book Now</button>
+        </form>
+        
         <h1 id="destination-title"></h1>
         <p id="destination-description"></p>
 
         <h3>Itinerary:</h3>
         <ul id="destination-itinerary"></ul>
+        <img id="destination-image" alt="Destination Image">
 
         <div id="map" style="height:300px;"></div>
 
